--- a/TODO.org
+++ b/TODO.org
@@ -1,5 +1,5 @@
 * Getting Started
-** [ ] Initial Command Line Interface
+** [x] Initial Command Line Interface
 *** Execution Environment Spec
 **** Can define the rest of the inputs
 *** List of collections
@@ -7,8 +7,8 @@
 *** Base Image
 *** Docker or Podman/Buildah?
 *** Path to resulting Dockerfile/containerfile stdout?
-** [ ] Dependency Resolution
+** [x] Dependency Resolution
 *** Will need to start base image to resolve dependencies
 **** docker run base-image <some command>
      Add volume containing collections
-** [ ] Write Dockerfile/containerfile
+** [x] Write Dockerfile/containerfile
